2-tier-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 2-tier-app
spec:
  rules:
  - host: 2-tier-app.127.0.0.1.xip.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: two-tier-app
            port:
              number: 80
